unpackaged/main/default/objects/SPCC_Inspection__c/SPCC_Inspection__c.object-meta.xml
<CustomObject>
    <label>SPCC Inspection</label>
    <nameField>
        <displayFormat>SPCC -{0000}</displayFormat>
        <label>SPCC Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPCC Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>