unpackaged/main/default/objects/SPCC_Inspection__c/fields/Corrective_Actions_Recommended_Taken__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Actions_Recommended_Taken__c</fullName>
    <label>Corrective Actions Recommended/Taken:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>