unpackaged/main/default/objects/SPCC_Inspection__c/fields/If_Inactive_please_comment_on_status_of__c.field-meta.xml
<CustomField>
    <fullName>If_Inactive_please_comment_on_status_of__c</fullName>
    <label>If Inactive, please comment on status of</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>