unpackaged/main/default/objects/SPCC_Inspection__c/fields/Tanks_engineered_with__c.field-meta.xml
<CustomField>
    <fullName>Tanks_engineered_with__c</fullName>
    <label>Tanks engineered with:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overflow equalizing lines</fullName>
            </value>
            <value>
                <fullName>Vacuum protection - Enardo valve</fullName>
                <label>Vacuum protection-Enardo valve</label>
            </value>
            <value>
                <fullName>High level sensors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>