unpackaged/main/default/objects/SPCC_Inspection__c/fields/Wellsite_Facility__c.field-meta.xml
<CustomField>
    <fullName>Wellsite_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wellsite/ Facility</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>ROUTINE_SPCC_INSPECTIONS</relationshipName>
    <type>Lookup</type>
</CustomField>