unpackaged/main/default/objects/SPCC_Inspection__c/fields/Wellsite_Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Wellsite_Facility_Status__c</fullName>
    <label>Well/ Facility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>