unpackaged/main/default/objects/SPCC_Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Wellsite_Facility__c</columns>
    <columns>NAME</columns>
    <columns>Wellsite_Facility_Status__c</columns>
    <columns>If_Inactive_please_comment_on_status_of__c</columns>
    <columns>Corrective_Actions_Recommended_Taken__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>